feat: update module in docs
