# docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/users": {
+        "/v1/users": {
             "post": {
-                "description": "Create a user with name and email",
+                "description": "Cria um usuário com nome e email",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,15 +16,15 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Create a new user",
+                "summary": "Cria um novo usuário",
                 "parameters": [
                     {
-                        "description": "User data",
+                        "description": "Dados do usuário",
                         "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateUserInput"
+                            "$ref": "#/definitions/handler.CreateUserDTO"
                         }
                     }
                 ],
@@ -32,25 +32,19 @@
                     "201": {
                         "description": "created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/responses.CreatedResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/responses.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/responses.ErrorResponse"
                         }
                     }
                 }
@@ -58,13 +52,29 @@
         }
     },
     "definitions": {
-        "handler.CreateUserInput": {
+        "handler.CreateUserDTO": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.CreatedResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
